--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -164,3 +164,32 @@ p {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+
+.hidden-text-block {
+    width: 500px;
+    margin: 50px auto;
+    height: 210px;
+    padding: 20px;
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      height: 50%;
+      background: linear-gradient(180deg,transparent,rgba(255,255,255,1));
+    }
+    &_expanded {
+      height: auto;
+      &::after {
+        display: none;
+      }
+    }
+}
